fixed body overflow on X-axis

--- a/scss/main2.scss
+++ b/scss/main2.scss
@@ -47,6 +47,7 @@ body {
     margin: 0px;
     padding: 0px;
     font: 20px/1.5 "Nunito", sans-serif;
+    overflow-x: hidden;
 }
 
 
@@ -310,6 +311,7 @@ a {
     }
     .project-grid{
         grid-template-columns: 1fr !important;
+        overflow: hidden;
     }
     
     .ascii-link{
